dark mode color fix

--- a/src/style.css
+++ b/src/style.css
@@ -62,10 +62,8 @@ h1 {
   padding: 0.25em;
   font-family: 'Roboto Mono', system-ui, sans-serif;
   border: 1px solid #006d64;
-  color: #009f91;
   border-radius: 0.1em;
 }
-.card input::placeholder{ color: #009f91; }
 
 #distance-input {
   width: 6ch;
@@ -117,5 +115,9 @@ h1 {
   .drop-shadow {
     box-shadow: 0 0 4em -1em #009f91;
   }
+
+  .card input,
+  .card input::placeholder{ color: #009f91; }
+
 
 }
